table_3/results/Cache2k-NW_pre_nullaway_ann.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_nw-ann-pre/src/src/main/java/org/cache2k/config/CustomizationSupplierByClassName.java:90: error: [NullAway] dereferenced expression className is @Nullable
    return className.equals(that.className);
                    ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_nw-ann-pre/src/src/main/java/org/cache2k/config/CacheTypeCapture.java:103: error: [NullAway] method returns @Nullable, but superclass method org.cache2k.config.CacheType.getComponentType() returns @NonNull
    public CacheType<?> getComponentType() {
                        ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 632ms
2
